Bug 603471 - Make int32* and int32_t* inter-convertible (r=jimb)